Fixed uneven margin for project card

--- a/source/stylesheets/components/_project-card.scss
+++ b/source/stylesheets/components/_project-card.scss
@@ -1,5 +1,4 @@
 #projects {
-  margin: 8px;
 }
 
 .project-card {
